Fix: pixelation and stretching of image by using object-cover class.

--- a/src/output.css
+++ b/src/output.css
@@ -582,6 +582,10 @@ video {
   height: 20rem;
 }
 
+.h-32 {
+  height: 8rem;
+}
+
 .w-16 {
   width: 4rem;
 }
@@ -618,6 +622,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .px-16 {
@@ -678,6 +687,14 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:h-80 {
+    height: 20rem;
+  }
+
+  .sm\:h-48 {
+    height: 12rem;
+  }
+
   .sm\:text-red-500 {
     --tw-text-opacity: 1;
     color: rgb(239 68 68 / var(--tw-text-opacity));
